# mcqueen

./: .gitignore  .gitmodules  README.md
custom_interfaces/: CMakeLists.txt  README.md  package.xml
custom_interfaces/srv/: Buzzer.srv  Screen.srv
mcqueen_description/: CMakeLists.txt  README.md  package.xml
mcqueen_description/config/: mcqueen.rviz
mcqueen_description/launch/: mcqueen.launch.py
mcqueen_description/meshes/: mcqueen_full.dae  mcqueen_no_wheel.dae  wheel.dae
mcqueen_description/urdf/: mcqueen.urdf.xacro  mcqueen_base.urdf.xacro  mcqueen_hw_interface.urdf.xacro
mcqueen_hw/: CMakeLists.txt  README.md  package.xml
mcqueen_hw/config/: mcqueen_controller.yaml  mcqueen_sensor_param.yaml
mcqueen_hw/docs/: BluetoothAudioComm.md  BluetoothComm.md  MqttComm.md  SerialComm.md  WhisperSpeechRecognizer.md
mcqueen_hw/examples/: bluetooth_audio_comm.cpp  bluetooth_comm.cpp  mqtt_comm.cpp  serial_comm.cpp
mcqueen_hw/include/mcqueen_hw/abstract/: IBuzzer.h  ICommDevice.h  IController.h  IDistanceSensor.h  IScreen.h  ISpeechRecognizer.h
mcqueen_hw/include/mcqueen_hw/concrete/: ActiveBuzzer.h  BluetoothAudioComm.h  BluetoothComm.h  HCSR04Sensor.h  MqttBuzzer.h  MqttComm.h  MqttDistanceSensor.h  MqttNextionScreen.h  PIDController.h  PassiveBuzzer.h  SerialComm.h  WhisperSpeechRecognizer.h
mcqueen_hw/include/mcqueen_hw/nodes/: buzzer_service.h  distance_publisher.h  motor_controller.h  screen_service.h
mcqueen_hw/include/mcqueen_hw/system/: mcqueen_system.h
mcqueen_hw/launch/: bringup.launch.py  control_manager.launch.py
mcqueen_hw/plugin_description/: hardware_plugin.xml
mcqueen_hw/src/abstract/: IBuzzer.cpp  ICommDevice.cpp  IController.cpp  IDistanceSensor.cpp  IScreen.cpp  ISpeechRecognizer.cpp
mcqueen_hw/src/concrete/: ActiveBuzzer.cpp  BluetoothAudioComm.cpp  BluetoothComm.cpp  HCSR04Sensor.cpp  MqttBuzzer.cpp  MqttComm.cpp  MqttDistanceSensor.cpp  MqttNextionScreen.cpp  PIDController.cpp  PassiveBuzzer.cpp  SerialComm.cpp  WhisperSpeechRecognizer.cpp
mcqueen_hw/src/nodes/: buzzer_service.cpp  distance_publisher.cpp  motor_controller.cpp  screen_service.cpp
mcqueen_hw/src/system/: mcqueen_system.cpp
mcqueen_hw/standalone/bluetooth_audio_comm/: CMakeLists.txt
mcqueen_hw/standalone/bluetooth_comm/: CMakeLists.txt
mcqueen_hw/standalone/mqtt_comm/: CMakeLists.txt
mcqueen_hw/standalone/serial_comm/: CMakeLists.txt
mcqueen_teleop/: MANIFEST.in  README.md  package.xml  requirements.txt  setup.cfg  setup.py
mcqueen_teleop/launch/: bringup.launch.py
mcqueen_teleop/mcqueen_teleop/: web_server.py
mcqueen_teleop/mcqueen_teleop/static/css/: mcqueen_teleop_buzzer.css  mcqueen_teleop_control.css  mcqueen_teleop_distance.css  mcqueen_teleop_screen.css  mcqueen_teleop_voice_assistant.css  style.css
mcqueen_teleop/mcqueen_teleop/static/js/: mcqueen_teleop_buzzer.js  mcqueen_teleop_control.js  mcqueen_teleop_distance.js  mcqueen_teleop_headlight.js  mcqueen_teleop_screen.js  mcqueen_teleop_voice_assistant.js
mcqueen_teleop/mcqueen_teleop/templates/: index.html  mcqueen_teleop_buzzer.html  mcqueen_teleop_control.html  mcqueen_teleop_distance.html  mcqueen_teleop_headlight.html  mcqueen_teleop_screen.html  mcqueen_teleop_voice_assistant.html
mcqueen_teleop/mcqueen_teleop/voice_assistant/: command_handler.py  command_processor.py  light_command_handler.py  mcqueen_command_handler.py  time_command_handler.py
